--- a/build.gradle
+++ b/build.gradle
@@ -23,3 +23,13 @@ dependencies {
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+jar {
+    manifest {
+        attributes "Main-Class": "com.test.LogReaderApplication"
+    }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
